Remove default password display from index.html
Removed default password information from the HTML.

--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                             <button type="button" class="toggle-password" id="togglePassword"><i class="fas fa-eye"></i></button>
                         </div>
                         <small style="color:var(--gray);margin-top:5px;display:block;">
-                            <i class="fas fa-info-circle"></i> Senha padrão: <code>admin123</code>
+                            <i class="fas fa-info-circle"></i> <code></code>
                         </small>
                     </div>
                     <button type="submit" class="btn" style="width:100%;">Acessar Painel Administrativo</button>
