--- a/admin.html
+++ b/admin.html
@@ -592,11 +592,11 @@
     </main>
   </div>
 
-  <!-- MODAL CONFIG INDEX (TEXTOS) -->
+  <!-- MODAL CONFIG INDEX (TEXTOS + IMAGENS) -->
   <div class="modal-backdrop" id="configModal">
     <div class="modal-dialog">
       <div class="modal-header">
-        <h3><i class="fas fa-sliders-h"></i> Configurações do Index (Textos)</h3>
+        <h3><i class="fas fa-sliders-h"></i> Configurações do Index (Textos e Imagens)</h3>
         <button class="close-modal" id="closeConfigBtn" title="Fechar">
           <i class="fas fa-times"></i>
         </button>
@@ -605,7 +605,7 @@
         <div class="config-card">
           <div class="config-title">Textos Gerais</div>
           <div class="config-subtitle">
-            Ajuste aqui textos do <strong>index.html</strong>. As alterações são salvas apenas neste navegador
+            Ajuste aqui textos e imagens do <strong>index.html</strong>. As alterações são salvas apenas neste navegador
             (via <code>localStorage.bemorhSiteConfig</code>) e o site lê esses valores.
           </div>
 
@@ -635,7 +635,7 @@
           <!-- HERO -->
           <div class="config-row">
             <h3>Hero (Topo do Index)</h3>
-            <small>Título, subtítulo e texto do botão principal.</small>
+            <small>Título, subtítulo, texto do botão e imagem principal.</small>
             <div class="form-group" style="margin-top:6px;">
               <label for="cfg_heroTitle_idx">Título</label>
               <input type="text" id="cfg_heroTitle_idx" class="form-control">
@@ -647,6 +647,11 @@
             <div class="form-group">
               <label for="cfg_heroContactText_idx">Texto do Botão Verde</label>
               <input type="text" id="cfg_heroContactText_idx" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="cfg_heroImage_idx">URL da imagem do Hero</label>
+              <input type="url" id="cfg_heroImage_idx" class="form-control" placeholder="https://...">
+              <small>Se deixar em branco, o site usa a imagem padrão.</small>
             </div>
           </div>
 
@@ -703,6 +708,37 @@
                 <div class="form-group">
                   <label for="cfg_service4Description_idx">Descrição</label>
                   <textarea id="cfg_service4Description_idx" rows="2" class="form-control"></textarea>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- IMAGENS DOS PROJETOS EM DESTAQUE -->
+          <div class="config-row">
+            <h3>Imagens dos Projetos em Destaque</h3>
+            <small>URLs das imagens usadas nos 3 cards de projetos em destaque do index.</small>
+            <div class="config-grid-2" style="margin-top:6px;">
+              <div>
+                <strong>Projeto 1</strong>
+                <div class="form-group">
+                  <label for="cfg_project1Image_idx">URL da imagem</label>
+                  <input type="url" id="cfg_project1Image_idx" class="form-control" placeholder="https://...">
+                </div>
+              </div>
+              <div>
+                <strong>Projeto 2</strong>
+                <div class="form-group">
+                  <label for="cfg_project2Image_idx">URL da imagem</label>
+                  <input type="url" id="cfg_project2Image_idx" class="form-control" placeholder="https://...">
+                </div>
+              </div>
+            </div>
+            <div class="config-grid-2">
+              <div>
+                <strong>Projeto 3</strong>
+                <div class="form-group">
+                  <label for="cfg_project3Image_idx">URL da imagem</label>
+                  <input type="url" id="cfg_project3Image_idx" class="form-control" placeholder="https://...">
                 </div>
               </div>
             </div>
@@ -1243,6 +1279,10 @@
       heroTitle:"Bemorh",
       heroSubtitle:"Nascemos da crença de que as melhores soluções surgem da conexão de ideias. Somos uma empresa de tecnologia especializada em desenvolver ferramentas virtuais que facilitam a colaboração, estimulam a inovação e transformam conceitos em realidade.",
       heroContactText:"Fale Conosco",
+      heroImage:"https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&auto=format&fit=crop&w=1100&q=80",
+      project1Image:"",
+      project2Image:"",
+      project3Image:"",
       servicesTitle:"Nossos Serviços",
       service1Title:"Desenvolvimento Web",
       service1Description:"Sites, sistemas web e aplicações responsivas com as melhores tecnologias do mercado.",
@@ -1306,6 +1346,10 @@
       setVal("cfg_heroTitle_idx", cfg.heroTitle);
       setVal("cfg_heroSubtitle_idx", cfg.heroSubtitle);
       setVal("cfg_heroContactText_idx", cfg.heroContactText);
+      setVal("cfg_heroImage_idx", cfg.heroImage);
+      setVal("cfg_project1Image_idx", cfg.project1Image);
+      setVal("cfg_project2Image_idx", cfg.project2Image);
+      setVal("cfg_project3Image_idx", cfg.project3Image);
       setVal("cfg_servicesTitle_idx", cfg.servicesTitle);
       setVal("cfg_service1Title_idx", cfg.service1Title);
       setVal("cfg_service1Description_idx", cfg.service1Description);
@@ -1356,6 +1400,10 @@
         heroTitle:getVal("cfg_heroTitle_idx"),
         heroSubtitle:getVal("cfg_heroSubtitle_idx"),
         heroContactText:getVal("cfg_heroContactText_idx"),
+        heroImage:getVal("cfg_heroImage_idx"),
+        project1Image:getVal("cfg_project1Image_idx"),
+        project2Image:getVal("cfg_project2Image_idx"),
+        project3Image:getVal("cfg_project3Image_idx"),
         servicesTitle:getVal("cfg_servicesTitle_idx"),
         service1Title:getVal("cfg_service1Title_idx"),
         service1Description:getVal("cfg_service1Description_idx"),
