--- a/index.html
+++ b/index.html
@@ -146,19 +146,20 @@
             justify-content: center;
         }
 
-        .logo-main {
-            font-size: 1.6rem;
-            font-weight: 800;
-            color: var(--primary);
-            letter-spacing: 0.5px;
-            line-height: 1.2;
-        }
+       .logo-main {
+    font-size: 1.8rem;          /* tamanho próximo da imagem */
+    font-weight: 700;           /* forte, mas não ultra bold */
+    color: #273444;             /* cinza-azulado mais suave */
+    letter-spacing: 0.02em;
+    line-height: 1.1;
+}
 
-        .logo-tagline {
-            font-size: 0.85rem;
-            color: var(--secondary);
-            font-style: italic;
-            margin-top: 2px;
+.logo-tagline {
+    font-size: 0.9rem;
+    color: #1f8ad0;             /* azul mais vivo */
+    font-style: italic;         /* itálico como na imagem */
+    margin-top: 2px;
+
         }
 
         nav {
