Update logo styles in index.html

--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
             justify-content: center;
         }
 
-       .logo-main {
-    font-size: 1.8rem;          /* tamanho próximo da imagem */
-    font-weight: 700;           /* forte, mas não ultra bold */
-    color: #273444;             /* cinza-azulado mais suave */
-    letter-spacing: 0.02em;
-    line-height: 1.1;
+    .logo-main {
+    font-size: 1.6rem;
+    font-weight: 800;
+    color: var(--primary);
+    letter-spacing: 0.5px;
+    line-height: 1.2;
 }
 
 .logo-tagline {
