Update project and contact information in index.html

--- a/index.html
+++ b/index.html
@@ -1353,10 +1353,10 @@
             project1Status:"Concluído",
             project1Description:"Plataforma colaborativa que organiza e prioriza ideias em projetos executáveis com fluxos visuais intuitivos.",
             project2Title:"IA para Inovação",
-            project2Status:"Em Andamento",
+            project2Status:"Concluído",
             project2Description:"Ferramenta de inteligência artificial que auxilia na geração e refinamento de ideias criativas para negócios.",
             project3Title:"Plataforma Colaborativa",
-            project3Status:"Em Planejamento",
+            project3Status:"Concluído",
             project3Description:"Ambiente virtual para equipes distribuídas colaborarem em tempo real no desenvolvimento de projetos.",
             project1Image:"",
             project2Image:"",
@@ -1384,9 +1384,9 @@
             contactTitle:"Conecte-se Conosco",
             contactInfoTitle:"Informações de Contato",
             contactAddressTitle:"Endereço",
-            contactAddressText:"Av. das Inovações, 123 - Centro de Tecnologia<br>São Paulo - SP, 04538-000",
+            contactAddressText:"Canoas -RS",
             contactPhoneTitle:"Telefone",
-            contactPhoneText:"(11) 3456-7890",
+            contactPhoneText:"(51) 98040-4736",
             contactEmailTitle:"Email",
             contactEmailText:"contato@bemorh.com.br",
             contactScheduleTitle:"Horário de Atendimento",
@@ -1401,8 +1401,8 @@
             footerDescription:"Tecnologia que conecta ideias. Desenvolvemos soluções digitais inovadoras que transformam conceitos em realidade.",
             footerQuickLinksTitle:"Links Rápidos",
             footerContactTitle:"Contato",
-            footerAddress:"Av. das Inovações, 123 - São Paulo, SP",
-            footerPhone:"(11) 3456-7890",
+            footerAddress:"Canoas -RS",
+            footerPhone:"(51) 98040-4736",
             footerEmail:"contato@bemorh.com.br",
             footerSchedule:"Seg-Sex: 8h-19h",
             footerCopyright:"© 2023 Bemorh - Tecnologia que Conecta Ideias. Todos os direitos reservados."
